--- a/drnet-backend/.env
+++ b/drnet-backend/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb+srv://drnetinnovations:Janamdrnet@cluster0.nwdzzmh.mongodb.net/drnet?retryWrites=true&w=majority&appName=Cluster0
+# MONGO_URI=mongodb+srv://drnetinnovations:Janamdrnet@cluster0.nwdzzmh.mongodb.net/drnet?retryWrites=true&w=majority&appName=Cluster0
 PORT=5000
+MONGO_URI=mongodb://mongo:IbzJtxoNPSqbrGUQqBvNrlfmdwptbmui@mongodb.railway.internal:27017
